--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
 
 
     <!-- Path to Framework7 Library CSS-->
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/framework7.ios.min.css">
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/framework7.ios.colors.min.css">
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/framework7.material.colors.min.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/framework7.ios.min.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/framework7.ios.colors.min.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/framework7.material.colors.min.css">
 
 
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/framework7-icons.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/framework7-icons/css/framework7-icons.css">
     <!-- Path to your custom app styles-->
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/my-app.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/my-app.css">
 
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/main.css">
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/miayotlan.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/main.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/miayotlan.css">
 
 
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/Swiper/dist/css/swiper.css">
-    <link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/raw/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/welcomescreen.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/Swiper/dist/css/swiper.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/welcomescreen.css">
 
-<link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/Framework7-TwitterDarkMode.css">
-<link rel="stylesheet" href="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/css/Framework7-Facebook.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/Framework7-TwitterDarkMode.css">
+<link rel="stylesheet" href="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/css/Framework7-Facebook.css">
 
 <script src="https://use.fontawesome.com/24199056dc.js"></script>
-<link  rel="stylesheet" href="https://miayotlan.com/font-awesome/css/font-awesome.min.css">
+<link  rel="stylesheet" href="http://miayotlan.com/font-awesome/css/font-awesome.min.css">
 
 <script async src=”js/adsbygoogle.js”></script>
 
   </head>
-
+<body class="layout-FBM theme-blue framework7-root theme-blue">
 <body onload="F7Color();">
 
 <!--  <body id="changethistheme" class="layout-FBM" theme-indigo framework7-root theme-indigo">  -->
@@ -1923,11 +1923,11 @@ Galerias
 
 
 
-<script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/F7Colors.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/F7Colors.js"></script>
 
     <!-- Path to Framework7 Library JS-->
-    <script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/js/framework7.min.js"></script>
-    <script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/js/framework7.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/js/framework7.min.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/js/framework7.js"></script>
      <!-- Path to your themeplugin js-->
   <!---  <script type="text/javascript" src="js/themeplugin.js"></script>  --->
     <!-- Path to your app js-->
@@ -1935,12 +1935,12 @@ Galerias
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/js/my-app.js"></script>
-   <script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/Swiper/dist/js/swiper.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/js/my-app.js"></script>
+   <script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/Swiper/dist/js/swiper.js"></script>
 
 
-    <script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/example/js/myapp/pages/IndexPageController.js"></script>
-<script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/blob/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/example/js/myapp/init.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/example/js/myapp/pages/IndexPageController.js"></script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/example/js/myapp/init.js"></script>
 
 
     <style>
@@ -1961,7 +1961,7 @@ font-size:21px;
 
 
 
-    <script type="text/javascript" src="https://github.com/miayotlan/miayotlan.github.io/raw/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/welcomescreen.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/miayotlan/miayotlan.github.io/master/Framework7-master%202/examples/tab-bar/F7-Welcomescreen/welcomescreen.js"></script>
 
 
 
